# loan-risk-prediction

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
loan_risk_model/: data_preprocessing.py  model.py
notebooks/: loan-risk-prediction-model.ipynb
src/: init.py
src/loan_risk_model/: train.py
src/loan_risk_predictor/: config.py  data_preprocessing.py  feature_engineering.py  train.py
tests/: test_preprocessing.py
