[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-risk-predictor"
version = "0.1.3"
authors = [
  { name="Shanujan Suresh", email="shanujansh@gmail.com" },
]
description = "A package to predict loan risk using a decision tree model."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/shanujans/loan-risk-prediction"
"Bug Tracker" = "https://github.com/shanujans/loan-risk-prediction/issues"

# This new section explicitly tells the builder where to find packages
# and what to exclude, fixing the "Multiple top-level packages" error.
[tool.setuptools.packages.find]
exclude = ["notebooks*"]