[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-risk-predictor"
version = "0.2.0"
authors = [
  { name="Shanujan Suresh", email="shanujansh@gmail.com" },
]
description = "A package to predict loan risk using a decision tree model."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/shanujans/loan-risk-prediction"
"Bug Tracker" = "https://github.com/shanujans/loan-risk-prediction/issues"

[project.scripts]
lrp-train = "loan_risk_predictor.train:main"

# This section explicitly tells setuptools what the package is and where to find it.
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["loan_risk_predictor"]
include-package-data = true
