[metadata]
name = loan-risk-predictor
version = 0.1.1
author = Shanujan Suresh
author_email = shanujansh@gmail.com
description = A package to predict loan risk using a decision tree model.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shanujans/loan-risk-prediction
license = MIT
project_urls =
    Bug Tracker = https://github.com/shanujans/loan-risk-prediction
classifiers =
    Programming Language :: Python :: 3
    # License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    numpy
    scikit-learn

[options.packages.find]
exclude =
    tests*
    notebooks*

[options.package_data]
loan_risk_model = data/*.csv